# coqui-tts

./: README.md  package.oo.yaml  pyproject.toml
flows/conversion/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +python#1.py
flows/speech/: .flow.ui.oo.json  flow.oo.yaml
tasks/conversion/: __init__.py  task.oo.yaml
tasks/model/: __init__.py  task.oo.yaml
tasks/model-conversion/: __init__.py  task.oo.yaml
tasks/model-tts/: task.oo.yaml
tasks/speech/: __init__.py  task.oo.yaml
tasks/tts/: __init__.py  task.oo.yaml
