[project]
name = "coaui-tts"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "tts (==0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
